(env
 (dev
  (flags
   (:standard -w -7-9-31 -warn-error -33))))

(executable
 (name liquidsoap_js)
 (optional)
 (modes js)
 (modules liquidsoap_js)
 (preprocess
  (pps js_of_ocaml-ppx))
 (js_of_ocaml
   (flags --target-env=browser)
   (build_runtime_flags --target-env=browser))
 (libraries js_of_ocaml liquidsoap-js liquidsoap-lang liquidsoap-lang.tooling))
